--- a/bus-flight-service/src/main/resources/application.properties
+++ b/bus-flight-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=bus-flight-service
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/busflightdb
+spring.datasource.username=root
+spring.datasource.password=aidana
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
