--- a/bus-flight-service/src/main/resources/application.properties
+++ b/bus-flight-service/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=aidana
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+management.tracing.sampling.probability=1.0
+
+server.port=8082
