--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=discovery-server
+eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+server.port=8761
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+
+
+
+management.tracing.sampling.probability=1.0
+#spring.zipkin.base-url=http://localhost:9411
+#spring.sleuth.sampler.probability=1.0
+#
+#management.tracing.sampling.probability=1.0
