--- a/searching-service/src/main/resources/application.properties
+++ b/searching-service/src/main/resources/application.properties
@@ -6,3 +6,11 @@ server.port=8089
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=busflightsearch
+
+
+
+#eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.tracing.sampling.probability=1.0
+#eureka.client.se.defaultZone=http://localhost:8761/eureka
