--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.kafka.template.default-topic=notificationTopic
 spring.kafka.consumer.group-id= notificationId
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.type.mapping=event:com.techworld.notificationservice.event.BookingCompletedEvent
+spring.kafka.consumer.properties.spring.json.type.mapping=event:kz.iitu.notificationservice.event.BookingCompletedEvent
